# bikestat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf.example  pyproject.toml
backend/: __init__.py
backend/api/: __init__.py  activities.py  auth.py  export.py
backend/models/: __init__.py  activity.py
backend/services/: __init__.py  data_processor.py  garmin.py  session.py
backend/templates/: base.html  dashboard.html  index.html
