[project]
name = "bikestat"
version = "0.1.0"
description = "SaaS web app for Garmin Connect cycling activities analysis"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "garminconnect>=0.2.36",
    "garth>=0.4.50",
    "pandas>=2.2.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "reportlab>=4.2.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
